# JFC

./: Cargo.toml  data_types_notes.md
cli/: Cargo.toml  README.md
cli/src/: filter.rs  main.rs  test.json
cli/src/json/: mod.rs  parser.rs  tokenizer.rs
core/: Cargo.toml
core/src/: lib.rs
generic_tokenizer/: Cargo.toml  README.md
generic_tokenizer/src/: char_locations.rs  lib.rs  location.rs  non_zero.rs  span.rs  utf8_tokenizer.rs
jq/: Cargo.toml
jq/src/: main.rs
json/: Cargo.toml  README.md
json-fuzzer/: Cargo.toml
json-fuzzer/src/: lib.rs
json/src/: lib.rs  parser.rs  tokenizer.rs
src/: main.rs
streaming-parser/: Cargo.toml  README.md  globalAvgPop.json  myFile.json  myResultJson.json  worldPopulations.json
streaming-parser/src/: char_locations.rs  de.rs  key_value_pair_stream.rs  key_value_pair_writer.rs  lib.rs  location.rs  tests.rs  tokenizer.rs  value_stream.rs  value_writer.rs
