[package]
name = "jfc"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "A CLI tool for working with malformed JSON"
repository = "https://github.com/mr-adult/JFC"
documentation = "https://docs.rs/jfc/latest/jfc/"


[lints.rust]
unsafe_code = "forbid"

[dependencies]
clap = { version = "4.5", features = ["cargo"] }
toy-json-formatter = { version = "0.3", path = "../json/" }
