[package]
name = "jfc"
version = "0.1.9"
edition = "2021"
license = "MIT"
description = "A CLI tool for working with malformed JSON"
repository = "https://github.com/mr-adult/JFC"
documentation = "https://docs.rs/jfc/latest/jfc/"

[profile.release]
lto = true

[dependencies]
clap = { version = "4.5", features = ["cargo"] }
codespan-reporting = "0.12.0"
generic_tokenizer = { path = "../generic_tokenizer", version = "0.1" }
colored = "3.0.0"
